modified home callout css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,7 +20,7 @@ h1, h2, h3 {
 font-family: 'Open Sans', sans-serif;
 }
 
-body, .navbar {
+.navbar, .home-callout {
 	background: #0f0c29;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -28,4 +28,11 @@ body, .navbar {
 
 .navbar {
 	border: none;
+}
+
+.home-callout {
+	margin-top: -20px;
+	padding-top: 50px;
+	padding-bottom: 100px;
+	color: white;
 }
