--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,7 @@
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
-    <div class='container'>
+    </nav>
     <%= yield %>
-  </div>
   </body>
 </html>
