--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,24 @@ font-family: 'Open Sans', sans-serif;
 	border: none;
 }
 
+.navbar-default .navbar-brand {
+	color: white;
+}
+
+.navbar-default .navbar-nav > li > a {
+	color: white;
+}
+
+.navbar-default .navbar-brand:hover {
+	color: white;
+	opacity: 0.75;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+	color: white;
+	opacity: 0.75;
+}
+
 .home-callout {
 	margin-top: -20px;
 	padding-top: 50px;
