--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,22 +30,12 @@ font-family: 'Open Sans', sans-serif;
 	border: none;
 }
 
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
 	color: white;
-}
-
-.navbar-default .navbar-nav > li > a {
-	color: white;
-}
-
-.navbar-default .navbar-brand:hover {
-	color: white;
-	opacity: 0.75;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-	color: white;
-	opacity: 0.75;
+	&:hover {
+		color: white;
+	  opacity: 0.75;
+	}
 }
 
 .home-callout {
