--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,11 @@ font-family: 'Open Sans', sans-serif;
 	border: none;
 }
 
+.navbar-brand {
+	font-family: 'Open sans', sans-serif;
+	font-weight: 800;
+}
+
 .navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
 	color: white;
 	&:hover {
